# ionic-traces

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE.md  Pipfile  Procfile  Procfile.release  Procfile.schemas  README.md  environment.yml  fly.toml  install-git-hooks.sh  poetry-heroku-pre-commit.sh  pyproject.toml  requirements.txt
.circleci/: config.yml
ionic/: __main__.py  bot.py  cfg.py  schemas.py  web.py
ionic/static/: styles.css
ionic/templates/: failure.jinja  register.jinja  success.jinja  time.jinja
