[tool.poetry]
name = "ionic"
version = "2.0"
description = ""
authors = ["GS <gsfernandes81@gmail.com>"]
license = "\"Creative Commons Attribution-NonCommercial-NoDerivs 2.0 Generic License\""
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12"
arrow = "^1.2.3"
hypercorn = "^0.14.3"
Jinja2 = "^3.1.2"
pytz = ">=2022.1"
quart = "^0.18.3"
regex = ">2021.8.27,<2022.3.15"
uvloop = "^0.17.0"
dateparser = "^1.1.3"
sqlalchemy = "^2.0.0"
yarl = "^1.9.2"
hikari = { extras = ["speedups"], version = "==2.0.0.dev121" }
hikari-lightbulb = "^2.3.3"
attrs = "^23.1.0"
honcho = "^1.1.0"
asyncmy = "^0.2.8"
emoji = "^2.2.0"
logwood = "^3.1.0"
aiodebug = "^2.3.0"
werkzeug = "==2.2.2"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
black = "^22.10.0"
pyflakes = "^2.5.0"
rope = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
