[tool.poetry]
name = "ionic"
version = "2.0"
description = ""
authors = ["GS <gsfernandes81@gmail.com>"]
license = "\"Creative Commons Attribution-NonCommercial-NoDerivs 2.0 Generic License\""
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12.0"
arrow = "^1.3.0"
hypercorn = "^0.15"
Jinja2 = "^3.1.4"
quart = "^0.19.0"
regex = "^2023.6.3"
uvloop = "^0.19.0"
dateparser = "^1.1.3"
sqlalchemy = "^2.0.23"
yarl = "^1.9.2"
hikari = { extras = ["speedups"], version = "==2.0.0.dev126" }
hikari-lightbulb = "^2.3.3"
hikari-message = {git = "https://github.com/gsfernandes81/hikari-message.git", rev = "e0b7e5f"}
attrs = "^23.1.0"
honcho = "^1.1.0"
asyncmy = "^0.2.8"
emoji = "^2.8.0"
aiodebug = "^2.3.0"
werkzeug = "^3.0.3"
dd = {git = "https://github.com/gsfernandes81/destiny-director.git"}

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
ruff = "*"
pyflakes = "^2.5.0"
rope = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
